--- a/day-1-flexbox/1-intro-floats/begin/floats.html
+++ b/day-1-flexbox/1-intro-floats/begin/floats.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="wrapper">
 <!-- row 1, 4 individual boxes -->
-		<div>
+		<div class="row1">
 			<article>
 				<h3>Boston Cream Pie</h3>
 			    <img src="img/boston-cream.jpg" alt="Boston creme pie.">
@@ -37,7 +37,7 @@
 		    </article>
 		</div>
 <!-- row 2, 2 boxes spanning 2 rows -->
-		<div>
+		<div class="row2">
 		    <article>
 		    	<h3>Key Lime Pie</h3>
 		    	<img src="img/keylime-pie.jpg" alt="Key lime pie.">
@@ -52,15 +52,15 @@
 		    </article>
 		</div>
 
-<!-- row 4: narrow left column, wide right/content column -->
-		<div>
-			<article>
+<!-- row 3: narrow left column, wide right/content column -->
+		<div class="row3">
+			<article class="article1">
 				<h3>Boston Cream Pie</h3>
 			    <img src="img/boston-cream.jpg" alt="Boston creme pie.">
 			    <p>Boston's famous dessert, a combination of yellow cake, vanilla pudding, and chocolate frosting.</p>
 			    <p><a href="http://www.foodnetwork.com/recipes/boston-cream-pie-recipe0-1908702">Read more &gt;&gt;</a></p>
 			</article>
-			<article>
+			<article class="article2">
 		    	<h3>Coconut Cream Pie</h3>
 		    	<img src="img/coconut-cream.jpg" alt="Coconut cream pie.">
 		    	<p>Coconut cream pie will take you to an island escape. Especially delicious in winter.</p>
@@ -68,7 +68,7 @@
 		    </article>
 		</div>
 <!-- row 4: one column -->
-		<div>
+		<div class="row4">
 			<article>
 				<h3>Boston Cream Pie</h3>
 			    <img src="img/boston-cream.jpg" alt="Boston creme pie.">
